# trainstrainstrains

./: .gitignore  Cargo.toml  README.md  runcc-windows.yml
asset_loader/: Cargo.toml
asset_loader/src/: lib.rs
assets/: building.glb  cube.glb  map.glb  selection_circle.glb  ship.glb
common/: Cargo.toml
common/src/: lib.rs
components/: Cargo.toml
components/src/: beacon.rs  combat_state.rs  job.rs  lib.rs  transform.rs  viking.rs
game/: Cargo.toml
game/src/: input.rs  lib.rs  map_generation.rs  time.rs
game/src/systems/: mod.rs  physics.rs  train.rs  transform_hierarchy.rs  update_position.rs
gui/: Cargo.toml
gui/src/: bottom_bar.rs  icon.rs  lib.rs
metal_renderer/: Cargo.toml
metal_renderer/src/: lib.rs  metal_context.rs  metal_renderer.rs  yakui_metal.rs
metal_renderer/src/shaders/: shaders.air  shaders.metal  shaders.metallib
runner/: Cargo.toml
runner/src/: main.rs
vulkan_renderer/: Cargo.toml
vulkan_renderer/src/: buffer.rs  descriptors.rs  lazy_renderer.rs  lib.rs  vulkan_context.rs  vulkan_texture.rs
vulkan_renderer/src/shaders/: line.frag  line.vert  push_constant.glsl  shader.frag  shader.vert
