[package]
edition = "2021"
name = "asset-loader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
components = {path = "../components"}
futures-executor = {version = "0.3.28", features = ["thread-pool"]}
gltf = {version = "1.2.0", default-features = false, features = ["utils"]}
image = {version = "0.24.6", default-features = false, features = ["png"]}
itertools = "0.11.0"
thunderdome = "0.6.1"

# I refuse to test my documentation!
[lib]
doctest = false

[dev-dependencies]
env_logger = "0.10.0"
