[package]
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bitflags = "2.3.3"
glam = "0.22.0"
hecs = {version = "0.10.3", default-features = false}
log = "0.4.19"
rand = "0.8"
rapier3d = {version = "0.17.2", features = ["debug-render"]}
thunderdome = "0.6.1"
winit = "0.28.6"
yakui = {git = "https://github.com/leetvr/yakui", branch = "vulkan_fixes"}
