[package]
edition = "2021"
name = "game"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
components = {path = "../components"}
enum-iterator = "1.4.1"

[lib]
crate-type = ["cdylib", "rlib"]
