[package]
edition = "2021"
name = "metal_renderer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
common = {path = "../common"}
core-graphics-types = "0.1.2"
log = "0.4.19"
metal = "0.26.0"
objc = "0.2.7"
